# shorelark-rust

./: .gitignore  Cargo.toml  README.md
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: README.md  index.css  index.html  index.js  package-lock.json  package.json
